--- a/public/styles.css
+++ b/public/styles.css
@@ -166,3 +166,14 @@ h2 {
   background-color: rgb(177, 13, 177) !important;
   color: white !important;
 }
+
+.custom-round-button{
+  border-radius: 100%;
+  background-color: rgb(177, 13, 177) !important;
+  color: white !important;
+  width: 4vw;
+  height: 4vw;
+  border: 0;
+  font-size: 35px;
+  box-shadow: 0px 10px 10px #e0e0e0;
+}
