--- a/public/styles.css
+++ b/public/styles.css
@@ -171,8 +171,8 @@ h2 {
   border-radius: 100%;
   background-color: rgb(177, 13, 177) !important;
   color: white !important;
-  width: 4vw;
-  height: 4vw;
+  width: 60px;
+  height: 60px;
   border: 0;
   font-size: 35px;
   box-shadow: 0px 10px 10px #e0e0e0;
